<resources>
    <string name="app_name">Meal Planner</string>
    <string name="menu_header_text">Питайтесь\n правильно!</string>
    <string name="help_button_text">Справка</string>
    <string name="calorie_settings_button_text">Настройка калорий</string>
    <string name="dishes_list_button_text">Список блюд</string>
    <string name="breakfast_button_text">Завтрак</string>
    <string name="lunch_button_text">Обед</string>
    <string name="dinner_button_text">Ужин</string>
    <string name="recipe_header">Рецепт</string>
    <string name="help_calorie_header">Диапазон ккал в день</string>
    <string name="save_button_text">Сохранить</string>
    <string name="default_button_text">По умолчанию</string>
    <string name="update_button_text">Обновить</string>
    <string name="kcal">ккал</string>
    <string name="delete">Удалить</string>
    <string name="ok">ОК</string>
    <string name="about">Справка</string>

    <string name="settings_error_empty_field">Необходимо заполнить все поля</string>
    <string name="settings_error_invalid_percents">Проценты в сумме должны равняться 100%</string>
    <string name="settings_error_invalid_calories">Минимум калорий должен быть меньше максимума</string>

    <string name="editor_error_empty_field">Необходимо заполнить все поля</string>
    <string name="editor_error_meal">Необходимо отметить хотя бы один из приемов пищи</string>

    <string name="help_text">
        Добро пожаловать в приложение Meal Planner!\n\nВ первой вкладке меню навигации вы можете
        пополнить список теми блюдами, которые часто готовите.
        Для примера вам уже доступно 12 блюд. Их можно удалить при помощи длительного нажатия.\n\nНа
        остальных вкладках случайным образом с учетом настроек
        формируются завтрак, обед и ужин из блюд указанного выше списка.\n\nВ настройках, расположенных
        в правом верхнем углу экрана можно указать диапазон ккал на день
        и процентное соотношение приемов пищи.\n\nПриятного аппетита!
    </string>

    <string name="main_header">Список блюд</string>
    <string name="breakfast_header">Завтрак</string>
    <string name="lunch_header">Обед</string>
    <string name="dinner_header">Ужин</string>
    <string name="settings_header">"Настройка калорий"</string>

    <string name="action_bar_empty_title"></string>
    <string name="action_bar_settings_title">Настройки</string>
    <string name="action_bar_info_title">Справка</string>
    была "справка"
    <string name="action_bar_search_title">Поиск</string>
    <string name="action_bar_save_title">Сохранить</string>
    <string name="action_bar_edit_title">Изменить</string>

    <string name = "language">Язык</string>
    <string name = "russian">Русский</string>
    <string name = "english">Английский</string>

    <string name = "name">Название</string>
    <string name = "recipe_text">Текст рецепта</string>

    <string name="borscht">Борщ</string>
    <string name="cabbage_roll">Голубцы</string>
    <string name="coffee">Кофе</string>
    <string name="ice_cream">Мороженое</string>
    <string name="carbonara_pasta">Паста карбонара</string>
    <string name="tea">Чай</string>
    <string name="fish_soup">Уха</string>
    <string name="yogurt">Йогурт</string>
    <string name="omelette">Омлет</string>
    <string name="vegetable_salad">Овощной салат</string>
    <string name="apple">Яблоко</string>
    <string name="banana">Банан</string>

    <string-array name="dish_names">
        <item>Борщ</item>
        <item>Голубцы</item>
        <item>Кофе</item>
        <item>Мороженое</item>
        <item>Паста карбонара</item>
        <item>Чай</item>
        <item>Уха</item>
        <item>Йогурт</item>
        <item>Омлет</item>
        <item>Овощной салат</item>
        <item>Яблоко</item>
        <item>Банан</item>
    </string-array>

    <string-array name="dish_types">
        <item>Первое</item>
        <item>Второе</item>
        <item>Напиток</item>
        <item>Перекус</item>
        <item>Десерт</item>
        <item>Другое</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>