<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dishes_list"
        android:title="@string/dishes_list_button_text"
        android:icon="@drawable/ic_dishes_list"
        android:orderInCategory="1" />
    <item
        android:id="@+id/breakfast"
        android:title="@string/breakfast_button_text"
        android:icon="@drawable/ic_breakfast"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/lunch"
        android:title="@string/lunch_button_text"
        android:icon="@drawable/ic_lunch"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/dinner"
        android:title="@string/dinner_button_text"
        android:icon="@drawable/ic_dinner"
        android:orderInCategory="4"/>
</menu>