<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/action_bar_search_title"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="3"
        android:title="@string/action_bar_info_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/action_bar_settings_title"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:orderInCategory="2"/>
</menu>