<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flesh"
    tools:context=".view.activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/deep_dark_green" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <TextView
            android:id="@+id/calories_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:text="@string/help_calorie_header"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/calories_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/min_calories_edit_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/dash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="—"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/max_calories_edit_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/breakfast_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/breakfast_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/breakfast_button_text"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/breakfast_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/breakfast_percent"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="%"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lunch_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lunch_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/lunch_button_text"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/lunch_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/lunch_percent"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="%"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dinner_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dinner_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/dinner_button_text"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/dinner_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/dinner_percent"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="%"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/default_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/yellow"
        android:padding="12dp"
        android:text="@string/default_button_text"
        android:textColor="@color/dark_yellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:padding="12dp"
        android:text="@string/save_button_text"
        android:textColor="@color/deep_dark_green"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>