<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flesh"
    tools:context=".view.activities.DishActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/dish_toolbar"
      style="@style/Toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:elevation="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:titleTextColor="@color/deep_dark_green" />

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dish_toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/dish_image"
          android:layout_width="match_parent"
          android:layout_height="242dp"
          android:background="#FEF18F"
          android:scaleType="centerCrop"
          app:srcCompat="@drawable/empty_plate" />

      <TextView
          android:id="@+id/dish_name_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/green"
          android:padding="15dp"
          android:text="TextView"
          android:textAlignment="center"
          android:textColor="@color/deep_dark_green"
          android:textSize="16sp"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/dish_calorie_text"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="15dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/deep_dark_green"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dish_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="15dp"
            android:shadowColor="@color/black"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/deep_dark_green"
            android:textSize="16sp" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/breakfast_chip"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:padding="10dp"
            android:text="@string/breakfast_button_text"
            android:textAlignment="center"
            android:textColor="@color/deep_dark_green"
            android:textSize="16sp"
            app:chipBackgroundColor="@color/yellow"
            app:chipStrokeColor="@color/dark_green"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/lunch_chip"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:padding="10dp"
            android:text="@string/lunch_button_text"
            android:textAlignment="center"
            android:textColor="@color/deep_dark_green"
            android:textSize="16sp"
            app:chipBackgroundColor="@color/yellow"
            app:chipStrokeColor="@color/dark_green"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dinner_chip"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:padding="10dp"
            android:text="@string/dinner_button_text"
            android:textAlignment="center"
            android:textColor="@color/deep_dark_green"
            android:textSize="16sp"
            app:chipBackgroundColor="@color/yellow"
            app:chipStrokeColor="@color/dark_green"
            app:chipStrokeWidth="2dp" />
      </LinearLayout>

      <TextView
          android:id="@+id/recipe_header"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="10dp"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/recipe_header"
          android:textAlignment="textStart"
          android:textAllCaps="false"
          android:textSize="16sp"
          android:textStyle="bold|italic" />

      <TextView
          android:id="@+id/recipe_text"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:text="@string/recipe_text"
          android:textAlignment="textStart"
          android:textSize="16sp" />
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>