<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flesh"
    tools:context=".view.activities.EditorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editor_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/deep_dark_green" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editor_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:background="#FEF18F"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/empty_plate" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/dish_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:padding="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textColorHighlight="@color/brown"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/dish_calorie_text"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/kcal"
                        android:inputType="number"
                        android:padding="15dp"
                        android:textAlignment="center"
                        android:textColor="@color/brown"
                        android:textColorHighlight="@color/brown"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="15dp"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/breakfast_chip"
                    style="@style/CustomChip"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/breakfast_button_text"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:chipStrokeColor="@color/brown"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/lunch_chip"
                    style="@style/CustomChip"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/lunch_button_text"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:chipStrokeColor="@color/brown"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dinner_chip"
                    style="@style/CustomChip"
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/dinner_button_text"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:chipStrokeColor="@color/brown"
                    app:chipStrokeWidth="2dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/recipe_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/recipe_header"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/brown"
                android:textColorHighlight="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <EditText
                android:id="@+id/recipe_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/recipe_header"
                android:lineSpacingMultiplier="1.15"
                android:padding="15dp"
                android:textColor="@color/brown"
                android:textSize="16sp" />


            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>